@@ -15,7 +15,7 @@ YAWF::register(
   qr{d([1-9]\d*)},                   \&docpage,
   qr{setlang},                       \&setlang,
   qr{nospam},                        \&nospam,
-  qr{we-dont-like-ie6},              \&ie6message,
+  qr{we-dont-like-ie},               \&iemessage,
   qr{opensearch\.xml},               \&opensearch,
 
   # redirects for old URLs
@@ -364,12 +364,12 @@ sub nospam {
 }
 
 
-sub ie6message {
+sub iemessage {
   my $self = shift;
 
   if($self->reqParam('i-still-want-access')) {
     (my $ref = $self->reqHeader('Referer') || '/') =~ s/^\Q$self->{url}//;
-    $ref = '/' if $ref eq '/we-dont-like-ie6';
+    $ref = '/' if $ref eq '/we-dont-like-ie';
     $self->resRedirect($ref, 'temp');
     $self->resHeader('Set-Cookie', "ie-sucks=1; path=/; domain=$self->{cookie_domain}");
     return;
@@ -389,16 +389,16 @@ sub ie6message {
     div;
      h1 'Oops, we were too lazy to support your browser!';
      p;
-      lit qq|We decided to stop supporting Internet Explorer 6, as it's a royal pain in |
+      lit qq|We decided to stop supporting Internet Explorer 6 and 7, as it's a royal pain in |
          .qq|the ass to make our site look good in a browser that doesn't want to cooperate with us.<br />|
          .qq|You can try one of the following free alternatives: |
          .qq|<a href="http://www.mozilla.com/firefox/">Firefox</a>, |
          .qq|<a href="http://www.opera.com/">Opera</a>, |
          .qq|<a href="http://www.apple.com/safari/">Safari</a>, or |
          .qq|<a href="http://www.google.com/chrome">Chrome</a>.<br /><br />|
-         .qq|If you're really stubborn about using Internet Explorer, upgrading to version 7 will also work.<br /><br />|
+         .qq|If you're really stubborn about using Internet Explorer, upgrading to version 8 will also work.<br /><br />|
          .qq|...and if you're mad, you can also choose to ignore this warning and |
-         .qq|<a href="/we-dont-like-ie6?i-still-want-access=1">open the site anyway</a>.|;
+         .qq|<a href="/we-dont-like-ie?i-still-want-access=1">open the site anyway</a>.|;
      end;
     end;
    end;
